# repoclean

./: .gitattributes  .gitignore  .repoclean.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.env
.github/workflows/: repoclean.yml
repoclean/: cli.py  config_loader.py  config_template.py  fixer.py  gitignore.py  hooks.py  path_utils.py  rules.py  scanner.py  secrets.py  serializer.py  tracked_junk.py
